@@ -41,6 +41,7 @@ minimum_size 5 5
 net_avg_samples 2
 no_buffers yes
 out_to_console no
+out_to_stderr no
 own_window yes
 own_window_class Conky
 own_window_type normal
