@@ -323,6 +323,10 @@ of window can be useful for certain situations.
 Print text to stdout.
 
 .TP 
+\fB\*(T<\fBout_to_stderr\fR\*(T>\fR 
+Print text to stderr.
+
+.TP 
 \fB\*(T<\fBpad_percents\fR\*(T>\fR
 Pad percentages to this many decimals (0 = no padding)
 
