@@ -28,6 +28,9 @@ xftalpha 0.8
 # Print everything to stdout?
 # out_to_console no
 
+# ... or maybe to stderr ?
+# out_to_stderr no
+
 # MPD host/port
 # mpd_host localhost
 # mpd_port 6600
